need to fix sliding description

--- a/index.html
+++ b/index.html
@@ -1,5 +1,104 @@
 <html>
-   <body>
-     Hello World!
-   </body>
+	<head>
+		<title>BAB</title>
+		<link rel="stylesheet" href="assets/css/style.css">
+		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Asap" rel="stylesheet">
+	</head>
+	<body>
+		<div id="topbar-container">
+			<div id="topbar"></div>
+			<ul id="topbar-text">
+				<li id="boba-pic"><img src="assets/img/bobapic.png"/></li>
+				<li id="about-button">About</li>
+				<li id="lets-drink">Let's Drink</li>
+				<li id="facebook" class="contact"><a href="https://www.facebook.com/katielaau"><img src="assets/img/facebooklogo.png"/></a></li>
+				<li id="twitter" class="contact"><a href="https://twitter.com/katielaau_"><img src="assets/img/twitterlogo.png"/></a></li>
+				<li id="youtube" class="contact"><a href="https://www.youtube.com/channel/UCSVf_LweEIn1-bSZv3bPH_Q"><img src="assets/img/youtubelogo.png"/></a></li>
+				<li id="instagram" class="contact"><a href="https://www.instagram.com/katielaau_/"><img src="assets/img/instagramlogo.png"/></a></li>
+			</ul>
+		</div>
+
+		<div class="page-wrapper">
+			<section class="section" id="carousel-section">
+				<div class="carousel-container">
+					<div id="carousel">
+						<div class="carousel-item" id="home-item">
+							<div id="background"><img src="assets/img/marblebackground.jpg"/>
+								<div id="title">BAY AREA BOBA</div>
+								<div id="subtitle">{ YOUR GUIDE TO THE BAY AREA'S BEST BOBA! }</div>
+							</div>
+						</div>
+						<div class="carousel-item" id="about-item">
+							<div id="about">ABOUT</div>
+							<div id="about-text-container">
+								<div id="about-text">
+									Bay Area Boba (or BAB) is a website made by a passionate boba-lover who wanted to share her vast amounts of boba knowledge with the world. Whether boba is your life or you just want to give it try, Bay Area Boba will help you find the right place with the perfect drink to suit your needs. From reviews to top drinks, everything you will ever need to know about a bay area boba shop can be found here, so make sure to check out the Let's Drink page to find out more!  
+								</div>
+							</div>
+							<div class="about-img"><img src="assets/img/boba.svg"/></div>
+							<div class="about-img"><img src="assets/img/boba2.svg"/></div>
+							<div class="about-img"><img src="assets/img/boba3.svg"/></div>
+							<div class="about-img"><img src="assets/img/boba4.svg"/></div>
+						</div>
+						<div class="carousel-item" id="drink-item">
+							<div id="left" class="side">
+								<div class="container-left">
+									<div class="boba-shop" id="bobaguys"><img src="assets/img/bobaguys.jpg"/></div>
+									<div class="boba-shop" id="wonderfuls"><img src="assets/img/wonderfuls.jpg"/></div>
+									<div class="boba-shop" id="tfm"><img src="assets/img/tfm.jpg"/></div>
+								</div>
+								<div class="container-right">
+									<div class="boba-shop" id="coolteabar"><img src="assets/img/coolteabar.jpg"/></div>
+									<div class="boba-shop" id="pekoe"><img src="assets/img/pekoe.jpg"/></div>
+									<div class="boba-shop" id="gongcha"><img src="assets/img/gongcha.jpg"/></div>
+								</div>
+							</div>
+							<div id="right" class="side">
+								<div class="container">
+									<div id="drinks">LET'S DRINK!</div>
+									<div id="drinks-placeholder">Click any of the boba shops to the left to learn more!</div>
+								</div>
+							</div>
+							<div id="bobaguys-container">
+								<div id="bobaguys-title">BOBA GUYS</div>
+								<div id="bobaguys-stars"><img src="assets/img/fourstars.svg"/></div>
+								<div id="bobaguys-location-header">LOCATIONS</div>
+								<div id="bobaguys-location">
+									<div class="bobaguys-location-list">429 Stockton St, San Francisco, CA 94108</div>
+									<div class="bobaguys-location-list">8 Octavia St #308, San Francisco, CA 94102</div>
+									<div class="bobaguys-location-list">3491 19th St, San Francisco, CA 94110</div>
+									<div class="bobaguys-location-list">1002 16th St, San Francisco, CA 94107</div>
+								</div>
+<!-- 								<ul id="bobaguys-location">
+									<li>429 Stockton St, San Francisco, CA 94108</li>
+									<li>8 Octavia St #308, San Francisco, CA 94102</li>
+									<li>3491 19th St, San Francisco, CA 94110</li>
+									<li>1002 16th St, San Francisco, CA 94107</li>
+								</ul> -->
+								<div id="bobaguys-description">
+									Boba Guys is a business founded by two SF locals, Bin and Andrew, whose goals were to fundamentally change the way people view boba, tea, and perhaps, food. Using only high quality teas and ingredients, they began to craft boba drinks and have opened four different shops around San Francisco! Quality, passion, and transparency...
+								</div>
+								<div id="bobaguys-tips-header">TIPS</div>
+								<div id="bobaguys-tips">
+									If you're having trouble finding the place, look for the store with the long line and that will most likely be it! Expect lines - especially on a hot day - so try to go early and leave an ample amount of time for your boba runs! Try their strawberry matcha latte with boba; the combinations of flavors is different... but the good kind of different. :-)
+								</div>
+								<div id="bobaguys-website"><a href="http://www.bobaguys.com/">WWW.BOBAGUYS.COM</a></div>
+							</div>		
+						</div>
+					</div>
+					<div id="carousel-prev">
+                        <img class="img-scaled" src="assets/img/arrowleft.png"/>
+                    </div>
+                    <div id="carousel-next">
+                        <img class="img-scaled" src="assets/img/arrowright.png" />
+                    </div>
+                </div>
+            </section>
+        </div>
+
+	</body>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
+    </script> 
+	<script src = "assets/js/script.js"></script>
 </html>
