need to add coming soon page

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 									<div id="drinks-placeholder">Click any of the boba shops to the left to learn more!</div>
 								</div>
 							</div>
-							<div id="bobaguys-container">
+							<div class="bobaguys-container">
 								<div id="bobaguys-title">BOBA GUYS</div>
 								<div id="bobaguys-stars"><img src="assets/img/fourstars.svg"/></div>
 								<div id="bobaguys-location-header">LOCATIONS</div>
