--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
 									If you're having trouble finding the place, look for the store with the long line and that will most likely be it! Expect lines - especially on a hot day - so try to go early and leave an ample amount of time for your boba runs! Try their strawberry matcha latte with boba; the combinations of flavors is different... but the good kind of different. :-)
 								</div>
 								<div id="bobaguys-website"><a href="http://www.bobaguys.com/">WWW.BOBAGUYS.COM</a></div>
+							</div>
+							<div class="coming-soon-container">
+								<div id="coming-soon">
+									C O M I N G  S O O N !
+								</div>
 							</div>		
 						</div>
 					</div>
