--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
 
 	</body>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js">
     </script> 
 	<script src = "assets/js/script.js"></script>
 </html>
