just kidding this is the submission

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<title>BAB</title>
 		<link rel="stylesheet" href="assets/css/style.css">
+		<link rel="shortcut icon" href="assets/img/bobapic.png" />
 		<link href="https://fonts.googleapis.com/css?family=Amatic+SC" rel="stylesheet">
 		<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Asap" rel="stylesheet">
 	</head>
